Various additions and fixes for Victoria 3